--- a/reserves.html
+++ b/reserves.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Camping Sites</title>
+    <title>Reserves</title>
     <link rel="stylesheet" href="css/leaflet.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,7 +12,7 @@
 
 <script src="js/jquery-3.5.1.min.js"></script>
 <script src="js/leaflet.js"></script>
-<script src="js/campingSites.js"></script>
+<script src="js/reserves.js"></script>
 
 </body>
 </html>
