--- a/reserves.html
+++ b/reserves.html
@@ -11,6 +11,8 @@
 <article id="map"></article>
 
 <script src="js/jquery-3.5.1.min.js"></script>
+<script src="js/terraformer.js"></script>
+<script src="js/terraformer-wkt-parser-1.2.1.min.js"></script>
 <script src="js/leaflet.js"></script>
 <script src="js/reserves.js"></script>
 
