--- a/reserves.html
+++ b/reserves.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Reserves</title>
@@ -15,8 +15,8 @@
             <nav>
                 <div class="logo">logo</div>
                     <ul>
-                        <li><a class="active" href="Reserves.html">Reserves</a></li>
-                        <li><a href="Campsites.html">Campsites</a></li>
+                        <li><a class="active" href="reserves.html">Reserves</a></li>
+                        <li><a href="campingSites.html">Campsites</a></li>
                     </ul>
             </nav>
         </header>
