--- a/skateparks.html
+++ b/skateparks.html
@@ -64,9 +64,7 @@
             </div>
         </div>
         <script src="js/jquery-3.5.1.min.js"></script>
-        <script src="js/terraformer.js"></script>
-        <script src="js/terraformer-wkt-parser-1.2.1.min.js"></script>
         <script src="js/leaflet.js"></script>
-        <script src="js/reserves.js"></script>
+        <script src="js/skateParks.js"></script>
     </body>
 </html>
