--- a/gardens.html
+++ b/gardens.html
@@ -26,7 +26,6 @@
             </div>
             <div class="content-area">
                 <h2>Let's Go Gardens</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, mollitia?</p>
                 <div class="information">
                     <div class="info-box">
                         <div class="map"><article id="map"></article></div>
@@ -67,6 +66,6 @@
         <script src="js/terraformer.js"></script>
         <script src="js/terraformer-wkt-parser-1.2.1.min.js"></script>
         <script src="js/leaflet.js"></script>
-        <script src="js/publicGardens.js"></script>
+        <script src="js/reserves.js"></script>
     </body>
 </html>
