--- a/skateparks.html
+++ b/skateparks.html
@@ -26,7 +26,6 @@
             </div>
             <div class="content-area">
                 <h2>Let's Go Skateparks</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, mollitia?</p>
                 <div class="information">
                     <div class="info-box">
                         <div class="map"><article id="map"></article></div>
@@ -64,7 +63,9 @@
             </div>
         </div>
         <script src="js/jquery-3.5.1.min.js"></script>
+        <script src="js/terraformer.js"></script>
+        <script src="js/terraformer-wkt-parser-1.2.1.min.js"></script>
         <script src="js/leaflet.js"></script>
-        <script src="js/skateParks.js"></script>
+        <script src="js/reserves.js"></script>
     </body>
 </html>
