--- a/gardens.html
+++ b/gardens.html
@@ -66,6 +66,6 @@
         <script src="js/terraformer.js"></script>
         <script src="js/terraformer-wkt-parser-1.2.1.min.js"></script>
         <script src="js/leaflet.js"></script>
-        <script src="js/reserves.js"></script>
+        <script src="js/publicGardens.js"></script>
     </body>
 </html>
