--- a/campingSites.html
+++ b/campingSites.html
@@ -97,9 +97,7 @@
             </div>
         </div>
         <script src="js/jquery-3.5.1.min.js"></script>
-        <script src="js/terraformer.js"></script>
-        <script src="js/terraformer-wkt-parser-1.2.1.min.js"></script>
         <script src="js/leaflet.js"></script>
-        <script src="js/reserves.js"></script>
+        <script src="js/campingSites.js"></script>
     </body>
 </html>
