--- a/homepage.html
+++ b/homepage.html
@@ -22,7 +22,7 @@
                 <h1>Southern Grampians Shire</h1>     
             </div>
             <div class="row-2">
-                <p>The Southern Grampians Shire is a leading, innovative and creative community offering many opportunities with the best of country living.</p>
+                <h5>Home.</h5>
             </div>
             <div class="row-3">
                 <a href="reserves.html" class="card card1">
