--- a/skateparks.html
+++ b/skateparks.html
@@ -41,7 +41,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                    <img src="img/img4.jpg" class="img-1">
+                                    <img src="img/coleraine2.jpg" class="img-1">
                                 </label>
                                 <div class="content content-1">
                                     <div class="title">Coleraine Skatepark</div>
@@ -50,7 +50,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                    <img src="img/img5.jpg" class="img-2">
+                                    <img src="img/DJI_0188.jpg" class="img-2">
                                 </label>
                                 <div class="content content-2">
                                     <div class="title">Hamilton Skate Park</div>
