--- a/Coleraine Skatepark.html
+++ b/Coleraine Skatepark.html
@@ -31,16 +31,16 @@
                     <input type="radio" name="active" id="tab-3">
                     <input type="radio" name="active" id="tab-4">
                     <div class="sliders">
-                        <label for="tab-1"><img src="img/img1.jpg"></label>
-                        <label for="tab-2"><img src="img/img2.jpg"></label>
-                        <label for="tab-3"><img src="img/img3.jpg"></label>
-                        <label for="tab-4"><img src="img/img4.jpg"></label>
+                        <label for="tab-1"><img src="img/coleraine2.jpg"></label>
+                        <label for="tab-2"><img src="img/coleraine4.jpg"></label>
+                        <label for="tab-3"><img src="img/coleraine6.jpg"></label>
+                        <label for="tab-4"><img src="img/coleraine8.jpg"></label>
                     </div>
                     <div class="img-card">
-                        <img src="img/img1.jpg">
-                        <img src="img/img2.jpg">
-                        <img src="img/img3.jpg">
-                        <img src="img/img4.jpg">
+                        <img src="img/coleraine2.jpg">
+                        <img src="img/coleraine4.jpg">
+                        <img src="img/coleraine6.jpg">
+                        <img src="img/coleraine8.jpg">
                     </div>
                 </div>
                 <div class="blog-post_info">
