--- a/colerain railway reserve.html
+++ b/colerain railway reserve.html
@@ -31,16 +31,16 @@
                     <input type="radio" name="active" id="tab-3">
                     <input type="radio" name="active" id="tab-4">
                     <div class="sliders">
-                        <label for="tab-1"><img src="img/img1.jpg"></label>
-                        <label for="tab-2"><img src="img/img2.jpg"></label>
-                        <label for="tab-3"><img src="img/img3.jpg"></label>
-                        <label for="tab-4"><img src="img/img4.jpg"></label>
+                        <label for="tab-1"><img src="img/HCRRRG1.jpg"></label>
+                        <label for="tab-2"><img src="img/MWsummer.jpg"></label>
+                        <label for="tab-3"><img src="img/v79-157 coleraine station 2019-10 pa088560-4256.jpg"></label>
+                        <label for="tab-4"><img src="img/WannonT2.jpg"></label>
                     </div>
                     <div class="img-card">
-                        <img src="img/img1.jpg">
-                        <img src="img/img2.jpg">
-                        <img src="img/img3.jpg">
-                        <img src="img/img4.jpg">
+                        <img src="img/HCRRRG1.jpg">
+                        <img src="img/MWsummer.jpg">
+                        <img src="img/v79-157 coleraine station 2019-10 pa088560-4256.jpg">
+                        <img src="img/WannonT2.jpg">
                     </div>
                 </div>
                 <div class="blog-post_info">
