--- a/coleraine race course.html
+++ b/coleraine race course.html
@@ -31,16 +31,16 @@
                     <input type="radio" name="active" id="tab-3">
                     <input type="radio" name="active" id="tab-4">
                     <div class="sliders">
-                        <label for="tab-1"><img src="img/img1.jpg"></label>
-                        <label for="tab-2"><img src="img/img2.jpg"></label>
-                        <label for="tab-3"><img src="img/img3.jpg"></label>
-                        <label for="tab-4"><img src="img/img4.jpg"></label>
+                        <label for="tab-1"><img src="img/Coleraine_Victoria.jpg"></label>
+                        <label for="tab-2"><img src="img/Coleraine-05-1-e1581569885443-990x280.jpg"></label>
+                        <label for="tab-3"><img src="img/ColeraineGrandstandPortrait.jpg"></label>
+                        <label for="tab-4"><img src="img/IMG_0168_4400235233_20170913013038.jpg"></label>
                     </div>
                     <div class="img-card">
-                        <img src="img/img1.jpg">
-                        <img src="img/img2.jpg">
-                        <img src="img/img3.jpg">
-                        <img src="img/img4.jpg">
+                        <img src="img/Coleraine_Victoria.jpg">
+                        <img src="img/Coleraine-05-1-e1581569885443-990x280.jpg">
+                        <img src="img/ColeraineGrandstandPortrait.jpg">
+                        <img src="img/IMG_0168_4400235233_20170913013038.jpg">
                     </div>
                 </div>
                 <div class="blog-post_info">
