--- a/reserves.html
+++ b/reserves.html
@@ -45,7 +45,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                    <img src="img/img4.jpg" class="img-1">
+                                    <img src="img/HCRRRG1.jpg" class="img-1">
                                 </label>
                                 <div class="content content-1">
                                     <div class="title">Coleraine Railway Reserve</div>
@@ -63,7 +63,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                    <img src="img/img8.jpg" class="img-5">
+                                    <img src="img/Coleraine_Victoria.jpg" class="img-5">
                                 </label>
                                 <div class="content content-5">
                                     <div class="title">Coleraine Racecourse</div>
@@ -72,7 +72,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                    <img src="img/img1.jpg" class="img-6">
+                                    <img src="img/Wannon-Falls.jpg" class="img-6">
                                 </label>
                                 <div class="content content-6">
                                     <div class="title">Wannon Falls Gates & Reserve</div>
