--- a/wannon falls.html
+++ b/wannon falls.html
@@ -31,16 +31,16 @@
                     <input type="radio" name="active" id="tab-3">
                     <input type="radio" name="active" id="tab-4">
                     <div class="sliders">
-                        <label for="tab-1"><img src="img/img1.jpg"></label>
-                        <label for="tab-2"><img src="img/img2.jpg"></label>
-                        <label for="tab-3"><img src="img/img3.jpg"></label>
-                        <label for="tab-4"><img src="img/img4.jpg"></label>
+                        <label for="tab-1"><img src="img/Wannon-Falls.jpg"></label>
+                        <label for="tab-2"><img src="img/unnamed.jpg"></label>
+                        <label for="tab-3"><img src="img/Wannon_Falls_003_jx_11142006.jpg"></label>
+                        <label for="tab-4"><img src="img/wannon-falls-2.jpg"></label>
                     </div>
                     <div class="img-card">
-                        <img src="img/img1.jpg">
-                        <img src="img/img2.jpg">
-                        <img src="img/img3.jpg">
-                        <img src="img/img4.jpg">
+                        <img src="img/Wannon-Falls.jpg">
+                        <img src="img/unnamed.jpg">
+                        <img src="img/Wannon_Falls_003_jx_11142006.jpg">
+                        <img src="img/wannon-falls-2.jpg">
                     </div>
                 </div>
                 <div class="blog-post_info">
