--- a/dcp.html
+++ b/dcp.html
@@ -31,16 +31,16 @@
                     <input type="radio" name="active" id="tab-3">
                     <input type="radio" name="active" id="tab-4">
                     <div class="sliders">
-                        <label for="tab-1"><img src="img/img1.jpg"></label>
-                        <label for="tab-2"><img src="img/img2.jpg"></label>
-                        <label for="tab-3"><img src="img/img3.jpg"></label>
-                        <label for="tab-4"><img src="img/img4.jpg"></label>
+                        <label for="tab-1"><img src="img/Dunkeld-Caravan-Park-3.jpeg"></label>
+                        <label for="tab-2"><img src="img/dunkeld-caravan-park.jpg"></label>
+                        <label for="tab-3"><img src="img/dunkeld-caravan-park-57b98f169fb8209f5978d8fb-800x600.jpeg"></label>
+                        <label for="tab-4"><img src="img/dunkeld-caravan-park-aerial-whatsupdownunder-1024x570.jpg"></label>
                     </div>
                     <div class="img-card">
-                        <img src="img/img1.jpg">
-                        <img src="img/img2.jpg">
-                        <img src="img/img3.jpg">
-                        <img src="img/img4.jpg">
+                        <img src="img/Dunkeld-Caravan-Park-3.jpeg">
+                        <img src="img/dunkeld-caravan-park.jpg">
+                        <img src="img/dunkeld-caravan-park-57b98f169fb8209f5978d8fb-800x600.jpeg">
+                        <img src="img/dunkeld-caravan-park-aerial-whatsupdownunder-1024x570.jpg">
                     </div>
                 </div>
                 <div class="blog-post_info">
