--- a/gardens.html
+++ b/gardens.html
@@ -41,7 +41,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                    <img src="img/img4.jpg" class="img-1">
+                                    <img src="img/8dcb7dfedcb3d3d782e04e23014fceaa_-victoria-southern-grampians-shire-hamilton-hamilton-botanic-gardens-1800-807-056html.jpg" class="img-1">
                                 </label>
                                 <div class="content content-1">
                                     <div class="title">Hamilton Botanic Gardens</div>
@@ -50,7 +50,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                    <img src="img/img5.jpg" class="img-2">
+                                    <img src="img/dunkeld-aboretum_gra_r_146099_1150x863.jpg" class="img-2">
                                 </label>
                                 <div class="content content-2">
                                     <div class="title">Dunkeld Arboretum</div>
