--- a/hcp.html
+++ b/hcp.html
@@ -31,16 +31,16 @@
                     <input type="radio" name="active" id="tab-3">
                     <input type="radio" name="active" id="tab-4">
                     <div class="sliders">
-                        <label for="tab-1"><img src="img/img1.jpg"></label>
-                        <label for="tab-2"><img src="img/img2.jpg"></label>
-                        <label for="tab-3"><img src="img/img3.jpg"></label>
-                        <label for="tab-4"><img src="img/img4.jpg"></label>
+                        <label for="tab-1"><img src="img/162633061-2.jpg"></label>
+                        <label for="tab-2"><img src="img/42cf31164cc9ab311a1004506d9ab8e8_1600X900.jpeg"></label>
+                        <label for="tab-3"><img src="img/Original__9689302_DK63_DSCF1156_fznctf1_2048X1152.JPG"></label>
+                        <label for="tab-4"><img src="img/Original__9689311_DK63_DSCF1140_basloab_1600X900.JPG"></label>
                     </div>
                     <div class="img-card">
-                        <img src="img/img1.jpg">
-                        <img src="img/img2.jpg">
-                        <img src="img/img3.jpg">
-                        <img src="img/img4.jpg">
+                        <img src="img/162633061-2.jpg">
+                        <img src="img/42cf31164cc9ab311a1004506d9ab8e8_1600X900.jpeg">
+                        <img src="img/Original__9689302_DK63_DSCF1156_fznctf1_2048X1152.JPG">
+                        <img src="img/Original__9689311_DK63_DSCF1140_basloab_1600X900.JPG">
                     </div>
                 </div>
                 <div class="blog-post_info">
