--- a/Dunkeld Arboretum.html
+++ b/Dunkeld Arboretum.html
@@ -31,16 +31,16 @@
                     <input type="radio" name="active" id="tab-3">
                     <input type="radio" name="active" id="tab-4">
                     <div class="sliders">
-                        <label for="tab-1"><img src="img/img1.jpg"></label>
-                        <label for="tab-2"><img src="img/img2.jpg"></label>
-                        <label for="tab-3"><img src="img/img3.jpg"></label>
-                        <label for="tab-4"><img src="img/img4.jpg"></label>
+                        <label for="tab-1"><img src="img/dunkeld-aboretum_gra_r_146099_1150x863.jpg"></label>
+                        <label for="tab-2"><img src="img/Dunkeld-Arboretum.jpg"></label>
+                        <label for="tab-3"><img src="img/dunkeld-arboretum_gra_r_supplied_sunset_1600x900.jpg"></label>
+                        <label for="tab-4"><img src="img/Dunkeld-Arboretum-0080-scaled.jpg"></label>
                     </div>
                     <div class="img-card">
-                        <img src="img/img1.jpg">
-                        <img src="img/img2.jpg">
-                        <img src="img/img3.jpg">
-                        <img src="img/img4.jpg">
+                        <img src="img/dunkeld-aboretum_gra_r_146099_1150x863.jpg">
+                        <img src="img/Dunkeld-Arboretum.jpg">
+                        <img src="img/dunkeld-arboretum_gra_r_supplied_sunset_1600x900.jpg">
+                        <img src="img/Dunkeld-Arboretum-0080-scaled.jpg">
                     </div>
                 </div>
                 <div class="blog-post_info">
