--- a/Hamilton Botanic Gardens.html
+++ b/Hamilton Botanic Gardens.html
@@ -31,16 +31,16 @@
                     <input type="radio" name="active" id="tab-3">
                     <input type="radio" name="active" id="tab-4">
                     <div class="sliders">
-                        <label for="tab-1"><img src="img/img1.jpg"></label>
-                        <label for="tab-2"><img src="img/img2.jpg"></label>
-                        <label for="tab-3"><img src="img/img3.jpg"></label>
-                        <label for="tab-4"><img src="img/img4.jpg"></label>
+                        <label for="tab-1"><img src="img/8dcb7dfedcb3d3d782e04e23014fceaa_-victoria-southern-grampians-shire-hamilton-hamilton-botanic-gardens-1800-807-056html.jpg"></label>
+                        <label for="tab-2"><img src="img/hamilton_3.jpg"></label>
+                        <label for="tab-3"><img src="img/hamilton-botanic-gardens_gra_r_supplied_1_1600x900.jpg"></label>
+                        <label for="tab-4"><img src="img/rcsgp-pg-HamiltonBotanicGardens_001.jpg"></label>
                     </div>
                     <div class="img-card">
-                        <img src="img/img1.jpg">
-                        <img src="img/img2.jpg">
-                        <img src="img/img3.jpg">
-                        <img src="img/img4.jpg">
+                        <img src="img/8dcb7dfedcb3d3d782e04e23014fceaa_-victoria-southern-grampians-shire-hamilton-hamilton-botanic-gardens-1800-807-056html.jpg">
+                        <img src="img/hamilton_3.jpg">
+                        <img src="img/hamilton-botanic-gardens_gra_r_supplied_1_1600x900.jpg">
+                        <img src="img/rcsgp-pg-HamiltonBotanicGardens_001.jpg">
                     </div>
                 </div>
                 <div class="blog-post_info">
