--- a/campingSites.html
+++ b/campingSites.html
@@ -45,7 +45,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                    <img src="img/img4.jpg" class="img-1">
+                                    <img src="img/20db540c93f4ab9daa6b1d2c1e47c3b4.jpeg" class="img-1">
                                 </label>
                                 <div class="content content-1">
                                     <div class="title">Coleraine Caravan Park</div>
@@ -54,7 +54,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                    <img src="img/img5.jpg" class="img-2">
+                                    <img src="img/162633061-2.jpg" class="img-2">
                                 </label>
                                 <div class="content content-2">
                                     <div class="title">Hamilton Caravan Park</div>
@@ -63,7 +63,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                    <img src="img/img6.jpg" class="img-3">
+                                    <img src="img/22050g000000805hx4FC5_R_550_412.jpg" class="img-3">
                                 </label>
                                 <div class="content content-3">
                                     <div class="title">Lake Hamilton Motor Village & Caravan park</div>
@@ -72,7 +72,7 @@
                             </div>
                             <div class="inner-part">
                                 <label for="imgTap" class="img">
-                                    <img src="img/img8.jpg" class="img-4">
+                                    <img src="img/Dunkeld-Caravan-Park-3.jpeg" class="img-4">
                                 </label>
                                 <div class="content content-4">
                                     <div class="title">Dunkeld Caravan Park</div>
