--- a/lhmv.html
+++ b/lhmv.html
@@ -31,16 +31,16 @@
                     <input type="radio" name="active" id="tab-3">
                     <input type="radio" name="active" id="tab-4">
                     <div class="sliders">
-                        <label for="tab-1"><img src="img/img1.jpg"></label>
-                        <label for="tab-2"><img src="img/img2.jpg"></label>
-                        <label for="tab-3"><img src="img/img3.jpg"></label>
-                        <label for="tab-4"><img src="img/img4.jpg"></label>
+                        <label for="tab-1"><img src="img/22050g000000805hx4FC5_R_550_412.jpg"></label>
+                        <label for="tab-2"><img src="img/6b9055ef118a6132334e7380388d6047_1600X900.jpeg"></label>
+                        <label for="tab-3"><img src="img/159516055.jpg"></label>
+                        <label for="tab-4"><img src="img/rcsgp-la-LakeHamilton_004.jpg"></label>
                     </div>
                     <div class="img-card">
-                        <img src="img/img1.jpg">
-                        <img src="img/img2.jpg">
-                        <img src="img/img3.jpg">
-                        <img src="img/img4.jpg">
+                        <img src="img/22050g000000805hx4FC5_R_550_412.jpg">
+                        <img src="img/6b9055ef118a6132334e7380388d6047_1600X900.jpeg">
+                        <img src="img/159516055.jpg">
+                        <img src="img/rcsgp-la-LakeHamilton_004.jpg">
                     </div>
                 </div>
                 <div class="blog-post_info">
